email + phone number

--- a/create_account.html
+++ b/create_account.html
@@ -21,15 +21,15 @@
       <input type="text" name="lname" id="lname" /><br />
       <br />
       <div>
-        <label for="phone number">phone number: <br /> </label>
+        <label for="phone number">phone number: </label>
+
+        <input type="tel" name="nbr" id="nbr" placeholder="+250 789 023 177" />
         <br />
-        <input
-          type="number"
-          name="nbr"
-          id="nbr"
-          placeholder="+250 789 023 177"
-        />
-        <br />
+        <div>
+          <br />
+          <label for="E-mail:">E-mail:</label>
+          <input type="email" name="email" id="email" />
+        </div>
       </div>
       <br />
       <div>
